--- a/back-end/.env
+++ b/back-end/.env
@@ -1,8 +1,9 @@
 PORT = 8080
+TOKEN = 0956d2fbd5d5c29844a4d21ed2f76e0c
 
 # Database
 DB_HOST = localhost
 DB_PORT = 5432
 DB_USERNAME = postgres
 DB_PASSWORD = admin
-DB_NAME = easyvet
+DB_NAME = popvets
