--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,35 +1,53 @@
 {
-   "name": "back-end",
-   "version": "1.0.0",
-   "description": "",
-   "main": "index.js",
-   "scripts": {
-      "dev": "nodemon --exec ts-node ./src/index.ts",
-      "migration:generate": "typeorm-ts-node-commonjs -d ./src/data-source.ts migration:generate ./src/migrations/default",
-      "migration:run": "typeorm-ts-node-commonjs -d ./src/data-source.ts migration:run",
-      "test": "echo \"Error: no test specified\" && exit 1"
-   },
-   "keywords": [],
-   "author": "",
-   "license": "ISC",
-   "volta": {
-      "node": "16.17.0",
-      "npm": "8.18.0"
-   },
-   "dependencies": {
-      "dotenv": "^16.0.1",
-      "express": "^4.18.1",
-      "pg": "^8.4.0",
-      "reflect-metadata": "^0.1.13",
-      "typeorm": "0.3.7"
-   },
-   "devDependencies": {
-      "@types/express": "^4.17.13",
-      "@types/morgan": "^1.9.3",
-      "@types/node": "^16.11.10",
-      "morgan": "^1.10.0",
-      "nodemon": "^2.0.19",
-      "ts-node": "10.7.0",
-      "typescript": "4.5.2"
-   }
+    "name": "back-end",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "dev": "nodemon --exec ts-node ./src/index.ts",
+        "migration:generate": "typeorm-ts-node-commonjs -d ./src/database/data-source.ts migration:generate ./src/migrations/default",
+        "migration:run": "typeorm-ts-node-commonjs -d ./src/database/data-source.ts migration:run",
+        "format:check": "prettier --check .",
+        "format:write": "prettier --write .",
+        "lint:check": "eslint .",
+        "lint:fix": "eslint --fix .",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "volta": {
+        "node": "16.17.0",
+        "npm": "8.18.0"
+    },
+    "dependencies": {
+        "bcrypt": "^5.0.1",
+        "body-parser": "^1.20.0",
+        "dotenv": "^16.0.1",
+        "express": "^4.18.1",
+        "jsonwebtoken": "^8.5.1",
+        "pg": "^8.4.0",
+        "reflect-metadata": "^0.1.13",
+        "typeorm": "0.3.7"
+    },
+    "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
+        "@types/express": "^4.17.13",
+        "@types/jsonwebtoken": "^8.5.9",
+        "@types/morgan": "^1.9.3",
+        "@types/node": "^16.11.10",
+        "@typescript-eslint/eslint-plugin": "^5.36.2",
+        "@typescript-eslint/parser": "^5.36.2",
+        "eslint": "^8.23.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-config-standard-with-typescript": "^22.0.0",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-n": "^15.2.5",
+        "eslint-plugin-promise": "^6.0.1",
+        "morgan": "^1.10.0",
+        "nodemon": "^2.0.19",
+        "prettier": "^2.7.1",
+        "ts-node": "10.7.0",
+        "typescript": "^4.8.2"
+    }
 }
